--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -1,7 +1,3 @@
-// body {
-//   overflow: hidden;
-// }
-
 .modal-wrapper {
   position: absolute;
   top: 0;
@@ -158,6 +154,10 @@
 
 .blur-filter {
   filter: blur(7px);
+  overflow: hidden;
+}
+
+.overflow-hidden {
   overflow: hidden;
 }
 
