--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @import "./payment_history";
 @import "./normalize";
 @import "./transtatio";
+@import "./form_card_loading";
 @import "./modal";
 
 * {
